# kalman

./: CMakeLists.txt  README.md  resources.md
doxygen/: CMakeLists.txt
include/: Kalman.hpp
test/: CMakeLists.txt  main.cpp
